# project-template

./: Makefile  README.md  TODO.txt  initial-test-data.txt  install.sh  make.py  out  script.sh  setup.sh  temp.tar
apps/cpp_app/: Containerfile  build.sh  run.sh
apps/java_app/: run.sh
apps/leetcode/: .gitignore  CMakeLists.txt  Containerfile  build.sh  init.sh  links.txt  run.sh  scrape.sh  start.sh  test_forever.sh
apps/py_app/: README.rst  start.sh
apps/yapl/: README.md  run.sh  yapl.py  yapl.ypl.py
config/: .gitconfig  config.yml
config/.githooks/: .githooks-installed  commit-msg
config/cmake/: post.cmake  targets.cmake
containers/cluster/: Containerfile  k3s copy.yml  k3s-worker.yml  k3s.yml  kubeconfig.yaml  logs.sh  start.sh  stop.sh  watch.sh
docs/: LICENSE
docs/_project_docs_/: CHANGELOG.md  CONTRIBUTING.md  DESIGN_HLD.md  DESIGN_STAGE_0.md  DESIGN_STAGE_2.md  DESIGN_STAGE_3.md  OSS.md  QUICK_START.md  VERSIONING.md  VSCODE_TIPS.md  run.sh
docs/doxygen/: Doxyfile  run.sh
docs/markdown/: CHANGELOG.md  CODE_STYLE.md  DESIGN.md  DESIGN_HLD.md  DESIGN_STAGE_0.md  DESIGN_STAGE_1.md  DESIGN_STAGE_2.md  DESIGN_STAGE_3.md  DESIGN_STAGE_4.md  DEV_WORKFLOW.md  OSS.md  QUICK_START.md  VERSIONING.md  run.sh
docs/notebooks/: notebook.ipynb
docs/sphinx/: run.sh
results/: CMakeLists.txt  Makefile  README.md  ansible.cfg  setup.sh
results/apps/py_app/: requirements.txt  setup.cfg  setup.py  start.sh
results/config/: env.yml
scripts/make/: basic.mak  common.mak  extras.mak
scripts/tools/: README.md  check.sh  common.py  (+10 more)
tmp/: TODO.txt
(+300 files in other folders)
