[metadata]
description = <oneliner>
long_description = file: README.rst
license = AAA
license_file = LICENSE
url = <website>
project_urls = 
	Source Control = <abc>
	Issue Tracker  = <def>
maintainer = <lead>
maintainer_email = <lead>@place.com
classifiers = 
	Development Status :: Dev
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Test Operators
	Natural Language :: English
	Operating System :: POSIX
	Operating System :: Unix
	Programming Language :: Python
	Programming Language :: Python :: 3
	Topic :: Software Development
	Topic :: Utilities
keywords = software, engineering